fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -128,12 +128,21 @@ td {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  /*padding-top: 16px;*/
+  /*padding-bottom: 16px;*/
+  display: inline-flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
 }
 
 .content-element {
-  margin: auto 16px;
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+.spacer {
+  margin: 16px 0 0 0;
+  height: 0;
 }
 
 table {
@@ -150,16 +159,16 @@ hr {
 
 
 .divider {
-  border-top: 5px solid var(--a2white);
-  align-self: stretch;
   padding: 0;
-  margin: 16px 0;
+  margin: 0;
   height: 0;
+  width: 100%;
 }
 
 .featured-list {
   width: 76%;
   padding: 0 12%;
+  /*margin-bottom: 16px;*/
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -170,18 +179,18 @@ hr {
 
 .featured-list > * {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .tools-list {
-  width: 96%;
-  padding: 0 0 0 4%;
+  width: 93%;
+  margin: 0 0 16px 7%;
   column-count: 3;
   column-fill: balance;
 }
 
 .tools-list > * {
   margin: 0;
-  padding: 10px;
 }
 
 .text-large {
@@ -204,13 +213,15 @@ hr {
 h2 {
   font-weight: normal;
   font-size: 1.5em;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 h3 {
   font-weight: normal;
   font-size: 1.2em;
   margin-top: 10px;
-  margin-bottom: 3px;
+  margin-bottom: 10px;
 }
 
 h4 {
@@ -226,11 +237,24 @@ p {
   height: 0;
   min-height: 100%;
   float: left;
-  margin-right: 5px;
+  margin-right: 13px;
 }
 
 .logo-text {
   margin: 15px 0;
+}
+
+.external-margins {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.internal-margins > *:first-child {
+  margin-top: 16px;
+}
+
+.internal-margins > *:last-child {
+  margin-bottom: 16px;
 }
 
 .a2border {
